--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -25,8 +25,10 @@
 	<div class="input-group">
   	<div class="input-group-addon", style= "color: red">Sub-category</div>
   	<div class="form-control", style= "width: 220px">
-		<%= f.select :subcategory_id, options_for_select([]) %></div>
+			<%= f.select :subcategory_id, Subcategory.all.map {|f| [f.name, f.id]} %>
+		</div>
 	</div>
+
 	<hr>
 	<div class="input-group">
   	<span class="input-group-addon" id="basic-addon2">Ad Title</span>
