ADDED IRB console to layout VW, whitelisted docker 172.17.0.0/16 network.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -108,5 +108,6 @@
    $('.dropdown-toggle').dropdown()
   </script>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <% console %>
 </body>
 </html>
