UPDATED all the location search form fields to be commented out. Geo location will be re-enabled later.

--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -79,7 +79,7 @@ mark {
                 </p>
                 <p><b>The second option is to search by location</b>   
                 <ul>
-                <li>To find an item based on your location simply enter a city, zip code or state in the box labeled <font color="limegreen"><b>“city, state or zip”</b></font>.</li>
+                <!-- <li>To find an item based on your location simply enter a city, zip code or state in the box labeled <font color="limegreen"><b>“city, state or zip”</b></font>.</li> -->
                 <li>Select a category that would like to search in</li>
                 <li>Then click <font color="limegreen"><b>"Search" </b></font></li>
                 <li><font color="red"><b>Note!</b></font> to narrow your search you can enter a keyword/s into the <font color="limegreen"><b>“keyword/s”</b></font>. box</li>
