--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -21,15 +21,19 @@
     </div>
     </div>
 </div>
+<!--
 <div class="form-group">
     <div class="col-xs-20">
     <div class="form-inline">
     <div class="col-xs-2">
-    <%= text_field_tag :location, nil, placeholder: 'city, state or zip', class: "form-control" , style: 'width: 180px; height: 35px' %>
+    <%=
+    # text_field_tag :location, nil, placeholder: 'city, state or zip', class: "form-control" , style: 'width: 180px; height: 35px'
+    %>
     </div>    
     </div>
     </div>
 </div>
+-->
 <div class="form-group">
     <div class="col-xs-20">
     <div class="form-inline">
