--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -42,8 +42,8 @@
   	
 <div class="form-control", style= "width: 220px">
 		
-<%= f.select :subcategory_id, options_for_select([]) %></div>
-	
+<%= f.select :subcategory_id, SubCategory.all.map {|f| [f.name, f.id]}  %></div>
+
 </div>
 	
 <hr>
