--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -28,7 +28,7 @@
       <div class="input-group">
         <div class="input-group-addon", style= "color: red">Sub-category</div>
         <div class="form-control", style= "width: 220px">
-          <% f.select :subcategory_id, SubCategory.all.map {|f| [f.name, f.id]}  %>
+          <%= f.select :subcategory_id, Subcategory.all.map {|f| [f.name, f.id]}  %>
         </div>
       </div>
       <hr>
