UPDATED physical address text.

--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -150,7 +150,7 @@ The storage as well as the processing of your personal data may require that you
 
 Connechub reserves the right to modify this Policy at any time by notifying registered users via e-mail of the existence of a new Policy and/or posting the new Policy on THE HUB. All changes to the Policy will be effective when posted, and your continued use of any Connechub Services after the posting will constitute your acceptance of, and agreement to be bound by, those changes.
 
-If you have any questions or comments regarding this Privacy Policy, please contact us by email to <a href="mailto:privacy@connechub.com">privacy@connechub.com.</a> or by mail at Connechub Inc., 10636 Northgate trl Dr, Charlotte, NC 28215. Please do not send sensitive information to us by email, since email communications are not always secure.
+If you have any questions or comments regarding this Privacy Policy, please contact us by email to <a href="mailto:privacy@connechub.com">privacy@connechub.com.</a> or by mail at Connechub Inc., 8807 citrus village dr 107 tampa,fl 33626. Please do not send sensitive information to us by email, since email communications are not always secure.
 <br /><br />
 
     <br />
