--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -28,10 +28,9 @@
             <div class="col-sm-4">
                 <h2>Contact Us</h2>
                 <address>
-                    <strong>Connechub Inc,</strong>
-                    <br>10636 Northgate Trl Dr.
-                    <br>Charlotte, NC 28215
-                    <br>
+                    <strong>Connechub, LLC.</strong><br />
+                    8807 citrus village dr 107<br />
+                    tampa,fl 33626
                 </address>
                 <address>
                     <abbr title="Phone">P:</abbr> (980) 219-3107
