Commented out the 'Report a User or an Item' FAQ. Can be added back later.

--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -488,7 +488,7 @@ mark {
     </div>
 </div>
 
-<div class="panel">
+<!--<div class="panel">
     <div class="panel-heading">
         <h4 class="small-heading">
             <a data-toggle="collapse" data-parent="#accordion" href="#filterPanel23">How do I report a user or an item?</a>
@@ -502,7 +502,7 @@ mark {
             <p>test2</p>
         </div>
     </div>
-</div>
+</div>-->
 
 <div class="panel">
     <div class="panel-heading">
