ADDED <title> ./app/views/layouts/app...erb. FORMATED my.cnf config file.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js"></script>
   <%= csrf_meta_tags %>
   <%= render "partials/google_analytics" %>
+  <title><%= ENV['APP_NAME'] %></title>
 </head>
 <body>
 <nav class="navbar navbar-default navbar-fixed-top">
