UPDATED email field.

--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -38,7 +38,7 @@
 					
 					<div class="input-group">
 						<div class="input-group-addon">Price</div>
-						<%= f.text_field :price, autofocus: true, class:"form-control", type: "number"%>
+						<%= f.text_field :price, autofocus: true, class:"form-control", type: "number" %>
 					</div>
 
 					<hr />
@@ -62,8 +62,8 @@
 					<hr />
 
 					<div class="input-group">
-					<div class="input-group-addon">Email / URL</div>
-						<%= f.email_field :ademail, class: "form-control" %> 
+					<div class="input-group-addon">Email</div>
+						<%= f.email_field :ademail, class: "form-control", type: "email" %> 
 					</div>
 					
 					<br />
