REPLACED <br /> with <br>. Formatted ./app/VW/listins/*.html.erb resources. UPDATED .rightbar SCSS

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -231,9 +231,9 @@ hr {display: block; margin-top: 0.5em; margin-bottom: 0.5em; margin-left: auto; 
 
 .catg_title{font-size:14px; font-family:Verdana, Arial, Helvetica, sans-serif; color:#707070; padding:3px;}
 .category_title{font-size:11px; font-weight:normal;}
-.category_title ul li a:hover{ color: #FFF; /* white */ background-color: #1DCF09; /* green */  padding:5px;}
-.price{font:Verdana, Arial, Helvetica, sans-serif; color:#e60000; font-size:14px;}
-.price1{font:Verdana, Arial, Helvetica, sans-serif; color:#e60000; font-size:26px; padding:3px; width:150px;}
+.category_title ul li a:hover{ color: #FFF; /* white */ background-color: #5cb85c; /* green */  padding:5px;}
+.price{font:Verdana, Arial, Helvetica, sans-serif; color:#5cb85c; font-size:14px;}
+.price1{font:Verdana, Arial, Helvetica, sans-serif; color:#5cb85c; font-size:26px; padding:3px; width:150px;}
 .topbar {
   background: #eee;
   margin-bottom: 20px;
