--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -28,8 +28,8 @@
             <div class="col-sm-4">
                 <h2>Contact Us</h2>
                 <address>
-                    <strong>Connechub, LLC.</strong><br />
-                    8807 citrus village dr 107<br />
+                    <strong>Connechub, LLC.</strong><br>
+                    8807 citrus village dr 107<br>
                     tampa,fl 33626
                 </address>
                 <address>
