--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -5,65 +5,65 @@
     <div class="abouttxt">
    <h1 align="center">PRIVACY POLICY</h1>
      <p>  
-    <br /> 
-    Privacy Policy (version 1)<br /> 
+    <br> 
+    Privacy Policy (version 1)<br> 
      <small>Last Updated: February 27, 2017</small>
-<br />  <br /> 
+<br>  <br> 
     <h3>WELCOME TO CONNECHUB</h3>
  Connechub, Inc., (together,“Connechub”, "The HUB", “we” and “us”) respects your privacy and is committed to helping you understand what data we collect, why we collect it, and what we do with it. Please, take time to read the Privacy Policy carefully.
 
-<br /><br />
+<br><br>
       	
 
 <h4>SERVICES COVERED</h4>
 We currently operate the Connechub website www.connechub.com (“THE HUB”). This Privacy Policy covers your use of the Services.
 
-<br /><br />
+<br><br>
 
   
 <h4>INFORMATION COLLECTED</h4>
 <b>A.</b> We may collect personal information (e.g., name, email address, mailing address, photos and videos) from you through THE HUB in the ways discussed in this Privacy Policy. We may also receive your personal information from other sources, such as public databases, joint marketing partners, social media platforms (including from people with whom you are friends or otherwise connected) and from other third parties.  If you refuse to divulge your personal information when requested, you may not be able to access certain areas as part of the Services (such as the ability to post videos, buy and sell products).
 
-<br /><br />
+<br><br>
   
 
 <b>B.</b>  We may collect the physical location of your device in order to record and publish information on your position and to show you products offered by users close to you. THE HUB may collect this information by, for example, using satellite, cell phone tower or WiFi signals. In some instances, you may be permitted to allow or deny such collection and use of your device’s location, but it may affect the possibility of using the THE HUB.
 
 
 
-<br /><br />
+<br><br>
   
 
 <b>C.</b>  We may also use any ad you post on THE HUB, including the uploaded photo and/or image as your profile pic or videos as well as other data (including user name and location) associated with the ad, for our own advertising purposes, including social media, Facebook ads, newsletters and ads for any media.
 
-<br /><br />
+<br><br>
   
 
 <b>D.</b>  We may use or disclose the personal information we collect from you as we believe necessary or appropriate, including, but not limited to, using and disclosing personal information for the following purposes: to protect people or property, to protect our services, rights or property, to comply with legal requirements, to respond to legal process or law enforcement requests and to comply with requests from other public and government authorities.
 
-<br /><br />
+<br><br>
   
 
 <h4>MEMBERSHIPS & REGISTRATION</h4>
 <b>A.</b> To use THE HUB you need to register your account. We may also collect information including phone number, birthday, and gender. In case you choose to register using a social media account, you authorize us to access and use certain information depending on the privacy settings that you have selected in the social network. Examples of personal data that we compile and use include your basic account information (e.g. name, email address, gender, birthday, current city, profile picture, user ID, list of friends, etc.) and any other additional information or activities that you permit the third party social network to share.
 
 
-<br /><br />
+<br><br>
   
 
 <b>B.</b> We may require you to provide us information such as a profile picture, name and surname, user name and email address for purposes of making available that information on the Website. You may visit some areas of the THE HUB as a guest and remain anonymous, but you may not be able to access all the content and features of those areas without registering. 
 
-<br /><br />
+<br><br>
   
 
 <h4>PUBLIC INFORMATION</h4>
 <b>A.</b> Please note that any information you post or disclose through THE HUB will become public and may be available to other users and the general public. We urge you to be very careful when deciding to disclose any information on the Services.
 
-<br /><br />
+<br><br>
   
 <b>B.</b> Please note that your user name and your public photo will be available to the Internet's general public while you participate in some Services, such as publishing products, so you should exercise discretion when using the THE HUB. Personal information disclosed by you may be collected by other users of such Services and may result in unsolicited messages. We are not responsible for protecting such information that you may disclose to third parties through our THE HUB (e.g. sending your telephone number to another user through the THE HUB). 
 
-<br /><br />
+<br><br>
   
 
 <h4>EMAIL NOTIFICATIONS & COMMUNICATIONS</h4>
@@ -71,7 +71,7 @@ We may contact you and/or send to you commercial communications via electronic c
 
 
 
-<br /><br />
+<br><br>
   
 
 <h4>NON-PERSONAL INFORMATION COLLECTED</h4>
@@ -82,78 +82,78 @@ We may contact you and/or send to you commercial communications via electronic c
 <li>IP address, which we may use for purposes such as calculating usage levels, diagnosing server problems and administering the Services. We may also derive your approximate location from your IP address;</li>
 
 </ul>
-<br /><br />
+<br><br>
   
 <b>B.</b>  To do this, THE HUB may use cookies and other technology. Your visits to THE HUB, and information provided through these technologies, will be anonymous unless you provide us with personal information or have provided such information in the past.
 
-<br /><br />
+<br><br>
   
 
 <b>C.</b>  We may also collect non-personal information when you voluntarily provide it.
 
-<br /><br />
+<br><br>
   
 <b>D.</b>  We may aggregate personal information, which when aggregated does not personally identify you or any other user of THE HUB. For example, we may aggregate personal information to calculate the percentage of our users who have a particular zip code.
 
-<br /><br />
+<br><br>
   
 
 <b>E.</b>  We may use and disclose non-personal information for any purpose, except where we are required to do otherwise under applicable law. In some instances, we may combine this information with personal information.  For example, if you have created an account with THE HUB, your account information may be linked to the items you viewed. If we do, we will treat the combined information as personal information as long as it is combined.  
 
-<br /><br />
+<br><br>
   
 
 <h4>CONNECHUB MAY CONTAIN "COOKIES"</h4>
 
 <b>A. Cookies</b> We may use cookies to manage our users’ sessions and to store preferences, tracking information, and language selection. Cookies may be used whether you register with us or not. “Cookies” are small text files transferred by a web server to your hard drive and thereafter stored on your computer. The types of information a cookie collects include the date and time you visited, your browsing history and your preferences. Typically, you can configure your browser to not accept cookies. You may also wish to refer to <a href="http://www.allaboutcookies.org/manage-cookies/index.html">ALL ABOUT COOKIES</a>. However, declining the use of cookies may limit your access to certain features of the Website. 
 
-<br /><br />
+<br><br>
   
 
 <b>B. Analytics</b> We use Google Analytics, which uses cookies and similar technologies to collect and analyze information about use of THE HUB and report on activities and trends.  THE HUB may also collect information regarding the use of other websites, apps and online resources.  You can learn about Google’s practices by going to <a href="https://www.google.com/policies/privacy/partners/">www.google.com/policies/privacy/partners/</a>, and opt out of them by downloading the Google Analytics opt-out browser add-on, available at <a href="https://tools.google.com/dlpage/gaoptout">https://tools.google.com/dlpage/gaoptout</a>.
 
-<br /><br />
+<br><br>
   
 
 <h4>ACCESS, DELETE OR CHANGE YOUR INFORMATION</h4> 
 
 <b>A.</b> You can exercise your rights to access, rectify, erase and object the processing of your personal data at any time by sending a writing request to Connechub ’s above mentioned address or to the following e-mail address: <a href="mailto:privacy@connechub.com">privacy@connechub.com.</a>
-<br /><br />
+<br><br>
  
 
 <b>B.</b> In order to properly attend your request, please make clear what personal information you are writing about. For your protection, we may only respond to requests for the personal information associated with the email address you use to send us your request, and we may need to verify your identity before implementing your request. We will try to comply with your request as soon as we can.
 
 
 
-<br /><br />
+<br><br>
   
 
 
 <h4>COMMITMENT TO SECURE ALL INFORMATION</h4>
 
 We seek to use reasonable organizational, technical and administrative measures to protect personal information within our organization. No website or Internet transmission is, however, completely secure. Consequently, Connechub cannot guarantee that unauthorized access, hacking, data loss, or other breaches will never occur. Your use of THE HUB is at your own risk. Connechub urges you to take steps to keep your personal information safe by memorizing your password or keeping it in a safe place.
-<br /><br />
+<br><br>
  
 
 <h4>THIRD PARTIES</h4>
 
 This Privacy Policy does not address, and Connechub is not responsible for, the privacy, information or other practices of any third parties, including any third party operating any site or service to which THE HUB link.
-<br /><br />
+<br><br>
  
 
 <h4>TRANSFER OF YOUR PERSONAL DATA</h4>
 
 The storage as well as the processing of your personal data may require that your personal data are transferred to, and/or stored at, a destination outside of your country of residence. By accepting this Privacy Policy, you agree to such transferring, storing and/or processing of personal data.
-<br /><br />
+<br><br>
 
 <h4>NOTICE OF CHANGES TO PRIVACY POLICY</h4>
 
 Connechub reserves the right to modify this Policy at any time by notifying registered users via e-mail of the existence of a new Policy and/or posting the new Policy on THE HUB. All changes to the Policy will be effective when posted, and your continued use of any Connechub Services after the posting will constitute your acceptance of, and agreement to be bound by, those changes.
 
 If you have any questions or comments regarding this Privacy Policy, please contact us by email to <a href="mailto:privacy@connechub.com">privacy@connechub.com.</a> or by mail at Connechub Inc., 8807 citrus village dr 107 tampa,fl 33626. Please do not send sensitive information to us by email, since email communications are not always secure.
-<br /><br />
+<br><br>
 
-    <br />
+    <br>
     <div align="right"><a href="#">Top of the Page</a></div>
     </div>
     </div>
