--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -154,6 +154,19 @@
   border-left: 1px #ccc solid;
   border-right: 1px #ccc solid;
   height: 300px;
+  ul {
+    text-align: center;
+    display: block;
+    list-style-type: none;
+    margin-top: 1em;
+    margin-bottom: 1 em;
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 40px;
+      li {
+        margin-bottom: 15px;
+      }
+    }
   li {
     text-align: center;
     margin-top: 15px;
