--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -13,12 +13,12 @@
 	  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
-	<br />
+	<br>
 	<div class="input-group">
       <span class="input-group-addon">My Bio</span>
       <%= f.text_area :bio, class: "form-control" %>
 	</div>
-		<br />
+		<br>
 	<div class="input-group">
       <span class="input-group-addon">My Profile image</span>
       <%= f.file_field :avatar, class: "form-control", style: 'width: 220px' %>
@@ -30,15 +30,15 @@
       <%= f.password_field :current_password, autocomplete: "off" %>
 	</div>  
 
-		<br />
-		<br />		
+		<br>
+		<br>		
 
 
 <div class="panel-footer">
 <h3>Password Change</h3>
 
 <div class="form-group">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br>
     <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
     <% if @minimum_password_length %>
 <br>
@@ -48,7 +48,7 @@
 
   
 <div class="form-group">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :password_confirmation %><br>
     <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
 </div>
 </div>
