--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,65 +1,79 @@
-<div style="height: 15px; width: 100%;"></div>
-
 <div class="container_12">
-  <!-- end .grid_7 -->
-  <div class="clear"></div>
-       <%= link_to 'Connechub', root_path %> > <%= link_to @listing.category.name, category_path(@listing.category) %> > <%= link_to @listing.subcategory.name, category_subcategory_path(@listing.category, @listing.subcategory) %> 
+    <div class="clear"></div>
+    <%= link_to 'Connechub', root_path %> > <%= link_to @listing.category.name, category_path(@listing.category) %> > <%= link_to @listing.subcategory.name, category_subcategory_path(@listing.category, @listing.subcategory) %> 
     <hr>
-  <div class="grid_6">
 
-    <p>
-     <div>
-    <%= videojs_rails sources: {mov: @listing.pin_image.url, mp4: @listing.pin_image.url, webm: @listing.pin_image.url, ogg: @listing.pin_image.url }, controls: true, autoplay: false, preload: true, setup: "{}", width:"450", height:"450" do%>
-      <% end %>
+    <div class="grid_6">
+        <p>
+            <div>
+                <%= videojs_rails sources: {
+                    mov: @listing.pin_image.url,
+                    mp4: @listing.pin_image.url,
+                    webm: @listing.pin_image.url,
+                    ogg: @listing.pin_image.url
+                },
+                controls: true,
+                autoplay: false,
+                preload: true,
+                setup: "{}",
+                width:"450",
+                height:"450" do%><% end %>
+            </div>
+            <small><b>Posted By: &nbsp;</b><%= @listing.user.email %></small>
+            <br><br><br>
+            <%= render 'comments/comment' %> 
+        </p>
     </div>
-    <small><b>Posted By: &nbsp;</b><%= @listing.user.email %></small>
-    <br>
-    <br>
-    <br>
-    <%= render 'comments/comment' %> 
-    </p>
-  </div>
-  <!-- end .grid_6 -->
-  <div class="grid_6">
-         	<div class="post-metadata">
-	<%= image_tag @listing.user.avatar.url(:thumb), class: 'avatar' %>
-   	<div class="post-info">
-    	<div class="post-title">
-	<span>
-		<%= link_to @listing.user.username, user_path(@listing.user.username) %>
-    	<div class= "pull-right price1" ><b>$<%= @listing.price %></b></div>	
-	</span>
-    	</div>
-	<i class="fa fa-map-marker" aria-hidden="true"></i> <small class="post-creation"><%= @listing.city %>, <%= @listing.state %> <%= @listing.zipcode %></small>
-   	</div>
-	</div>
-       <hr>
-     <div class="text-muted"> <small><b>Video ID:</b> <%= @listing.id %></small>  &nbsp; &nbsp; &nbsp;<small><i class= "fa fa-eye" aria-hidden="true"></i></small> <small><%= "#{@listing.impressionist_count}" %> views</small> &nbsp; &nbsp; &nbsp;<small><i class="fa fa-calendar" aria-hidden="true"></i></small> <small><%= time_ago_in_words(@listing.created_at) %></small> - <small><%= @listing.created_at.to_formatted_s(:short) %></small>
+
+    <div class="grid_6">
+        <div class="post-metadata">
+            <%= image_tag @listing.user.avatar.url(:thumb), class: 'avatar' %>
+            <div class="post-info">
+                <div class="post-title">
+                    <span>
+                        <%= link_to @listing.user.username, user_path(@listing.user.username) %>
+                        <div class= "pull-right price1" ><b>$<%= @listing.price %></b></div>	
+                    </span>
+                </div>
+            <i class="fa fa-map-marker" aria-hidden="true"></i> <small class="post-creation"><%= @listing.city %>, <%= @listing.state %> <%= @listing.zipcode %></small>
+        </div>
+    </div>
+    <hr>
+    
+    <div class="text-muted">
+        <small><b>Video ID:</b> <%= @listing.id %></small> 
+        <small>&nbsp; &nbsp; &nbsp;<i class= "fa fa-eye" aria-hidden="true"></i></small>
+        <small><%= "#{@listing.impressionist_count}" %> views</small>
+        <small>&nbsp; &nbsp; &nbsp;<i class="fa fa-calendar" aria-hidden="true"></i></small>
+        <small><%= time_ago_in_words(@listing.created_at) %></small> @ <small><%= @listing.created_at.to_formatted_s(:short) %></small>
     </div>
         
     <p>
-     <div class="hero-title">
-        <hr>
-        <span>
-        <b><%= @listing.title %></b>
-        <%= link_to like_listing_path(@listing), method: :put, class: 'pull-right' do %><i class = "fa fa-heart"></i> <%= @listing.votes_for.size %>
-        <% end %>
-        </span>
-        
+        <div class="hero-title">
+            <hr>
+            <span>
+                <b><%= @listing.title %></b>
+                <%= link_to like_listing_path(@listing), method: :put, class: 'pull-right' do %><i class = "fa fa-heart"></i> <%= @listing.votes_for.size %><% end %>
+            </span>       
         </div>
         <br>
+
         <div>
-        <%= simple_format (@listing.description) %>
+            <%= simple_format (@listing.description) %>
         </div>
         <hr>
+
         <div class="pull-right"><%= mail_to(@listing.user.email, "Make an Offer", class: 'btn btn-success btn-sm', subject: @listing.title, body: 'Reach out to make an offer about their ad.') %> </div>
         <br>
+        
         <div>
-        <% if @listing.user == current_user %>
-        <%= link_to 'Edit', edit_listing_path %> / 
-        <%= link_to 'Delete', @listing, data: {confirm: "Are you sure you want to delete this listing?" }, method: :delete %>  <% end %>
+            <% if @listing.user == current_user %>
+            <%= link_to 'Edit', edit_listing_path %> / 
+            <%= link_to 'Delete', @listing, data: {confirm: "Are you sure you want to delete this listing?" }, method: :delete %>  <% end %>
         </div>
         <br>
-       <script type='text/javascript' src='//platform-api.sharethis.com/js/sharethis.js#property=592c9b0955350600125cfef2&product=sticky-share-buttons' async='async'></script> </p>
-  </div>
+       
+        <script type='text/javascript' src='//platform-api.sharethis.com/js/sharethis.js#property=592c9b0955350600125cfef2&product=sticky-share-buttons' async='async'></script> </p>
+
+    </div>
 </div>
