--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,9 +20,7 @@
       <div align="left"> 
   
             <div class="container_12">
-            <div class = "small-heading"><%= @user.username %>'s Latest Video Ads </div>
-            <div style=" color: #ff3300; font-size: 80%; opacity: 0.7;"><b>NUMBER OF ADS - <%= @user.listings.count %></b>
-              </div>
+            <div class = "small-heading"><b>Active Posts: <%= @user.listings.count %></b></div>
               
             <hr>
             <div class = "grid transitions-enabled">
