REPLACED 'pin_image' with 'media'

--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -64,7 +64,7 @@
 
                     <div class="input-group">
                         <div class="input-group-addon">Video</div>
-                        <%= f.file_field :pin_image, class: "form-control" %>
+                        <%= f.file_field :media, class: "form-control" %>
                     </div>
                     <br>
     
