--- a/app/views/listings/search.html.erb
+++ b/app/views/listings/search.html.erb
@@ -11,10 +11,10 @@
                 <div class="panel-body">
                     <%= link_to (
                         videojs_rails sources: {
-                            mov: listing.pin_image.url,
-                            mp4: listing.pin_image.url,
-                            webm: listing.pin_image.url,
-                            ogg: listing.pin_image.url
+                            mov: listing.media.url,
+                            mp4: listing.media.url,
+                            webm: listing.media.url,
+                            ogg: listing.media.url
                         }, 
                         controls: false,
                         setup: "{}",
