--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,7 +28,7 @@
               <% @user.listings.each do |listing| %>
                   <div class="panel panel-default pin-item">
                       <div class="panel-body">
-                        <%= link_to (videojs_rails sources: {mov: listing.pin_image.url, mp4: listing.pin_image.url, webm: listing.pin_image.url, ogg: listing.pin_image.url},  controls: false, setup: "{}", class: 'img-responsive'), listing %>
+                        <%= link_to (videojs_rails sources: {mov: listing.media.url, mp4: listing.media.url, webm: listing.media.url, ogg: listing.media.url},  controls: false, setup: "{}", class: 'img-responsive'), listing %>
                       </div>
                         <div class="panel-footer pin-content"> 
                         <div class="price"><b>$<%= listing.price %></b></div>
