Now able to upload to a non public dir, when contents copied media loads from /app/public/system...

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -6,7 +6,7 @@
     <div class="grid_6">
         <p>
             <div>
-            URL: <%= @listing.media %>
+            URL: <%= @listing.media.url %>
                 <%= videojs_rails sources: {
                     mov: @listing.media.url,
                     mp4: @listing.media.url,
