--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -20,7 +20,7 @@
                 <div class="input-group">
                     <div class="input-group-addon">Main Category</div>
                     <div class="form-control">
-                        <%= f.select :category_id, Category.all.map {|f| [f.name, f.id]} %>
+                        <%= f.select :category_id, Category.all.map {|f| [f.name, f.id]}, include_blank: true %>
                     </div>
                 </div>
                 <br>
@@ -28,7 +28,7 @@
                 <div class="input-group">
                     <div class="input-group-addon">Sub Category</div>
                     <div class="form-control">
-                        <%= f.select :subcategory_id, Subcategory.all.map {|f| [f.name, f.id]} %>
+                        <%= f.select :subcategory_id, Subcategory.all.map {|f| [f.name, f.id]}, include_blank: true %>
                     </div>
                 </div>
                 <br>
