ADDED db index on charable attr in subcategories table. Cont working on what subcatagoeries are chargable and which are not; incl. the stripe payment for appearing when a charable subcateogry is selected.

--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -35,6 +35,10 @@
                 </div>
                 <br>
 
+                <div class="input-group hidden" id="payment_form">
+                    ASDF
+                </div>
+
                 <div class="input-group">
                     <div class="input-group-addon">Posting Title</div>
                     <%= f.email_field :title, class: "form-control" %>
