REMOVED user email field from listing new and edit form; already provided as is required during user sign up.

--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -35,13 +35,7 @@
 
                 <div class="input-group">
                     <div class="input-group-addon">Posting Title</div>
-                    <%= f.email_field :title, class: "form-control" %>
-                </div>
-                <br>
-
-                <div class="input-group">
-                    <div class="input-group-addon">Email</div>
-                    <%= f.email_field :ademail, class: "form-control" %>
+                    <%= f.text_field :title, class: "form-control" %>
                 </div>
                 <br>
 
