UPDATED ./db/schema.db. FIXED wrong text verbage in ./view/listings/edit.html.erb. UPDATED ./app/biews/devie/registration/edit.html.erb form: visual styling, add email form, updated button text.

--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -3,7 +3,7 @@
         <div class="panel panel-default">
 
             <div class="panel-heading">
-                <h2>Edit Your Account</h2>
+                <h2>Edit Your Posting</h2>
                 <div class = "small-heading", style="color:red">(All fields required.)</div>
             </div>
 
