--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,66 +1,64 @@
-<br>
 <div class="col-md-8 col-md-offset-2">
-<div class="row">
-<div class="panel panel-default">
-<div class="panel-heading">
-<h2>Edit Your Account</h2>
-</div>
+    <div class="row">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h2>Edit Your Account</h2>
+            </div>
 
+            <div class="panel-body">
+                <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, multipart: true }) do |f| %>
+                    <%= devise_error_messages! %>
 
-<div class="panel-body">
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, multipart: true }) do |f| %>
-<%= devise_error_messages! %>
-	  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-       <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-	<br>
-	<div class="input-group">
-      <span class="input-group-addon">My Bio</span>
-      <%= f.text_area :bio, class: "form-control" %>
-	</div>
-		<br>
-	<div class="input-group">
-      <span class="input-group-addon">My Profile image</span>
-      <%= f.file_field :avatar, class: "form-control", style: 'width: 220px' %>
-	</div>
-		<hr>
-	<div class = "small-heading", style="color:red">* Note! (we need your current password to confirm your changes)</div>
-	<div class="input-group">
-      <span class="input-group-addon", style= "color: red">Current Password</span>
-      <%= f.password_field :current_password, autocomplete: "off" %>
-	</div>  
+	                <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+                        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+                    <% end %>
+	                <br>
 
-		<br>
-		<br>		
+                    <%# <% <div class="input-group">
+                        <span class="input-group-addon">Username</span>
+                        %= f.text_field :username, class: "form-control" %
+	                </div>
+		            <br> %>
 
+                    <div class="input-group">
+                        <span class="input-group-addon">Email</span>
+                        <%= f.email_field :email, class: "form-control" %>
+	                </div>
+		            <br>
 
-<div class="panel-footer">
-<h3>Password Change</h3>
+                    <div class="input-group">
+                        <span class="input-group-addon">Profile image</span>
+                        <%= f.file_field :avatar, class: "form-control" %>
+	                </div>
+		            <br>
 
-<div class="form-group">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br>
-    <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
-    <% if @minimum_password_length %>
-<br>
-    <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-</div>
+                    <div class="input-group">
+                        <span class="input-group-addon">Current Password</span>
+                        <%= f.password_field :current_password, autocomplete: "off", class: "form-control" %>
+	                </div>
+                    <br>
+	                <div class = "small-heading", style="color:red">(We need your current password to alow password changes.)</div>
+		            <br>
 
-  
-<div class="form-group">
-    <%= f.label :password_confirmation %><br>
-    <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
+                    <div class="input-group">
+                        <span class="input-group-addon">New Password</span>
+                        <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
+	                </div>
+		            <br>
+
+                    <div class="input-group">
+                        <span class="input-group-addon">New Password Confirmation</span>
+                        <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
+	                </div>
+		            <br>
+
+                    <div class="form-group">
+                        <%= f.submit "Update", class: "btn btn-lg btn-success btn-block" %>
+                    </div>
+
+                <% end %> 
+
+        </div>
+    </div>
 </div>
-</div>
-<br>
- 
-<div class="actions">
-  <%= f.submit "Update", class: "btn btn-primary pull-right" %> 
-</div>
-    <% end %> 
-    <%= link_to "Back", :back, class: "btn btn-default" %>
-</div>
-</div>
-</div>
-</div>
-<br>  <br>
+<br> 
