--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -33,9 +33,9 @@
                     tampa,fl 33626
                 </address>
                 <address>
-                    <abbr title="Phone">P:</abbr> (980) 219-3107
+                    <abbr title="Phone">P:</abbr>+1 727 599 8661
                     <br>
-                    <abbr title="Email">E:</abbr> <a href="mailto:corporate@connechub.com">corporate@connechub.com</a>
+                    <abbr title="Email">E:</abbr> <a href="mailto:admin@connechub.com">admin@connechub.com</a>
                 </address>
             </div>
         </div>
