--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,9 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-       <%= link_to image_tag("connechub.png", :alt => "logo"), root_path  %>
+        <% if (request.original_url.count "/") != 3 %>
+          <%= link_to image_tag("connechub.png", :alt => "logo"), root_path  %>
+        <% end %>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
