--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container_12">
     <div class="clear"></div>
-    <%= link_to 'Connechub', root_path %> > <%= link_to @listing.category.name, category_path(@listing.category) %> > <%= link_to @listing.subcategory.name, category_subcategory_path(@listing.category, @listing.subcategory) %> 
+    <%= link_to 'Connechub', root_path %> > <%= link_to @listing.category.name, category_path(@listing.category) %> > <%= link_to @listing.subcategory.name, category_subcategory_path(@listing.category, @listing.subcategory) %>
     <hr>
 
     <div class="grid_6">
@@ -21,7 +21,7 @@
             </div>
             <small><b>Posted By: &nbsp;</b><%= @listing.user.email %></small>
             <br><br><br>
-            <%= render 'comments/comment' %> 
+            <%= render 'comments/comment' %>
         </p>
     </div>
 
@@ -32,29 +32,41 @@
                 <div class="post-title">
                     <span>
                         <%= link_to @listing.user.username, user_path(@listing.user.username) %>
-                        <div class= "pull-right price1" ><b>$<%= @listing.price %></b></div>	
+                        <div class= "pull-right price1" ><b>$<%= @listing.price %></b></div>
                     </span>
                 </div>
             <i class="fa fa-map-marker" aria-hidden="true"></i> <small class="post-creation"><%= @listing.city %>, <%= @listing.state %> <%= @listing.zipcode %></small>
         </div>
     </div>
     <hr>
-    
+
     <div class="text-muted">
-        <small><b>Video ID:</b> <%= @listing.id %></small> 
+        <small><b>Video ID:</b> <%= @listing.id %></small>
         <small>&nbsp; &nbsp; &nbsp;<i class= "fa fa-eye" aria-hidden="true"></i></small>
         <small><%= "#{@listing.impressionist_count}" %> views</small>
         <small>&nbsp; &nbsp; &nbsp;<i class="fa fa-calendar" aria-hidden="true"></i></small>
         <small><%= time_ago_in_words(@listing.created_at) %></small> @ <small><%= @listing.created_at.to_formatted_s(:short) %></small>
+        <small>
+            <a
+                style="color:red"
+                href="mailto:admin@connechub.com?subject=Flagging%20Post%20<%= @listing.id %>&body=Flagging%20post%20<%= @listing.id %>"
+                target="_new"
+            >
+                <i class="fa fa-flag"></i>&nbsp;Report Post
+            </a>
+        </small>
     </div>
-        
+
     <p>
         <div class="hero-title">
             <hr>
             <span>
                 <b><%= @listing.title %></b>
-                <%= link_to like_listing_path(@listing), method: :put, class: 'pull-right' do %><i class = "fa fa-heart"></i> <%= @listing.votes_for.size %><% end %>
-            </span>       
+                <%= link_to like_listing_path(@listing), method: :put, class: 'pull-right' do %>
+                    <i class = "fa fa-heart"></i>
+                    <%= @listing.votes_for.size %>
+                <% end %>
+            </span>
         </div>
         <br>
 
@@ -65,14 +77,14 @@
 
         <div class="pull-right"><%= mail_to(@listing.user.email, "Make an Offer", class: 'btn btn-success btn-sm', subject: @listing.title, body: 'Reach out to make an offer about their ad.') %> </div>
         <br>
-        
+
         <div>
             <% if @listing.user == current_user %>
-            <%= link_to 'Edit', edit_listing_path %> / 
+            <%= link_to 'Edit', edit_listing_path %> /
             <%= link_to 'Delete', @listing, data: {confirm: "Are you sure you want to delete this listing?" }, method: :delete %>  <% end %>
         </div>
         <br>
-       
+
         <script type='text/javascript' src='//platform-api.sharethis.com/js/sharethis.js#property=592c9b0955350600125cfef2&product=sticky-share-buttons' async='async'></script> </p>
 
     </div>
