Expanded on mailto body.

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -50,7 +50,7 @@
         <small>&nbsp; &nbsp; &nbsp;
             <a
                 style="color:red"
-                href="mailto:admin@connechub.com?subject=Flagging%20Post%20<%= @listing.id %>&body=Flagging%20post%20<%= @listing.id %>"
+                href="mailto:admin@connechub.com?subject=Reporting%20Post%20<%= @listing.id %>&body=I%20would%20like%20to%20report%20this%20ConnecHub%20post%20for%20violating%20the%20TOS%20/%20EULA%20or%20other%20reason%20(please explain)."
                 target="_new"
             >
                 <i class="fa fa-flag"></i>&nbsp;Report Post
